[package]
name = "mental-poker"
version = "0.1.0"
authors = ["Olavi Aikas <olavi.aikas@polytechnique.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.0"
num-traits = "0.2.14"
# partial_application = "0.2.0"